<package>
  <name>neo_usboard_v2</name>
  <version>1.0.0</version>
  <description>ROS Node for the new USBoardV2 (USS5)</description>

  <maintainer email="ros@neobotix.de">Neobotix</maintainer>
  <license>BSD</license>
  <url type="website">https://www.neobotix-roboter.de/</url>
  <author>Max Wittal</author>
  <author>Pradheep Krishna M P</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>neo_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>neo_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

</package>
